--- a/public/back/login.html
+++ b/public/back/login.html
@@ -15,17 +15,17 @@
         <h3 class="panel-title title-center">后台管理系统</h3>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" id="form">
           <div class="form-group">
-            <label for="inputEmail3" class="col-sm-3 control-label">用户名:</label>
+            <label class="col-sm-3 control-label">用户名:</label>
             <div class="col-sm-9">
-              <input type="email" class="form-control" id="inputEmail3" placeholder="请输入用户名">
+              <input type="text" class="form-control" name="username" id="username" placeholder="请输入用户名">
             </div>
           </div>
           <div class="form-group">
-            <label for="inputPassword3" class="col-sm-3 control-label">密　码:</label>
+            <label class="col-sm-3 control-label">密　码:</label>
             <div class="col-sm-9">
-              <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+              <input type="password" class="form-control" name="password" id="password" placeholder="请输入密码">
             </div>
           </div>
           <div class="form-group">
@@ -42,5 +42,6 @@
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+<script type="text/javascript" src="./js/login.js"></script>
 </body>
 </html>
