精度条完成

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -5,6 +5,7 @@
   <title>Title</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+  <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
@@ -42,6 +43,8 @@
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+<script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
+<script type="text/javascript" src="./js/common.js"></script>
 <script type="text/javascript" src="./js/login.js"></script>
 </body>
 </html>
