--- a/public/back/index.html
+++ b/public/back/index.html
@@ -3,8 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-a
+<div class="tg_aside">
+  <h1><a href="">黑马26期</a></h1>
+  <div class="user">
+    <img src="images/default.png" alt="">
+    <p>超级管理员</p>
+  </div>
+  <div class="nav">
+    <ul>
+      <li>
+        <a href="">
+          <i class="glyphicon glyphicon-user"></i>
+          <span>用户管理</span>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <i class="glyphicon glyphicon-list"></i>
+          <span>分类管理</span>
+        </a>
+        <div class="child" style="display: block">
+          <a href="">一级分类</a>
+          <a href="">二级分类</a>
+        </div>
+      </li>
+      <li>
+        <a href="">
+          <i class="glyphicon glyphicon-tags"></i>
+          <span>商品管理</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="tg_mian">
+  <div class="tg_topbar">
+
+  </div>
+  <div class="container-fluid"></div>
+</div>
+<script type="text/javascript" src="./lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
+<script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/login.js"></script>
 </body>
 </html>
