--- a/public/back/index.html
+++ b/public/back/index.html
@@ -24,11 +24,11 @@
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="javascript:;" class="category">
           <i class="glyphicon glyphicon-list"></i>
           <span>分类管理</span>
         </a>
-        <div class="child" style="display: block">
+        <div class="child" style="display: none">
           <a href="">一级分类</a>
           <a href="">二级分类</a>
         </div>
@@ -44,14 +44,32 @@
 </div>
 <div class="tg_mian">
   <div class="tg_topbar">
-
+    <a href="javascript:;" class="pull-left icon_menu"><i class="glyphicon glyphicon-align-justify"></i></a>
+    <a href="javascript:;" class="pull-right icon_logout"><i class="glyphicon glyphicon-log-out"></i></a>
   </div>
   <div class="container-fluid"></div>
+</div>
+
+<div class="modal fade" tabindex="-1" id="loginout_modal">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h4 class="modal-title">温馨提示</h4>
+      </div>
+      <div class="modal-body">
+        <p class="red"><i class="glyphicon glyphicon-info-sign"></i>您确定要退出后台管理系统吗？</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="loginout">退出</button>
+      </div>
+    </div>
+  </div>
 </div>
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-<script type="text/javascript" src="./js/login.js"></script>
 </body>
 </html>
