--- a/public/back/first.html
+++ b/public/back/first.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/public.css">
-  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 <div class="tg_aside">
@@ -29,8 +28,8 @@
           <i class="glyphicon glyphicon-list"></i>
           <span>分类管理</span>
         </a>
-        <div class="child" style="display: none">
-          <a href="first.html">一级分类</a>
+        <div class="child" style="display: block">
+          <a href="first.html" class="current">一级分类</a>
           <a href="second.html">二级分类</a>
         </div>
       </li>
@@ -52,16 +51,9 @@
     <div class="current">
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">首页</li>
+        <li class="active">分类管理</li>
+        <li class="active">一级分类</li>
       </ol>
-    </div>
-    <div class="tg_content">
-      <div class="echarts_1 pull-left">
-
-      </div>
-      <div class="echarts_2 pull-right">
-
-      </div>
     </div>
   </div>
 </div>
@@ -86,8 +78,6 @@
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
-<script type="text/javascript" src="./lib/echarts/echarts.min.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
