--- a/public/back/product.html
+++ b/public/back/product.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/public.css">
-  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 <div class="tg_aside">
@@ -35,7 +34,7 @@
         </div>
       </li>
       <li>
-        <a href="product.html">
+        <a href="product.html" class="current">
           <i class="glyphicon glyphicon-tags"></i>
           <span>商品管理</span>
         </a>
@@ -52,16 +51,8 @@
     <div class="current">
       <ol class="breadcrumb">
         <li><a href="#">管理系统</a></li>
-        <li class="active">首页</li>
+        <li class="active">商品管理</li>
       </ol>
-    </div>
-    <div class="tg_content">
-      <div class="echarts_1 pull-left">
-
-      </div>
-      <div class="echarts_2 pull-right">
-
-      </div>
     </div>
   </div>
 </div>
@@ -86,8 +77,6 @@
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
-<script type="text/javascript" src="./lib/echarts/echarts.min.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
