--- a/public/back/user.html
+++ b/public/back/user.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/public.css">
+  <link rel="stylesheet" href="./css/user.css">
 </head>
 <body>
 <div class="tg_aside">
@@ -54,6 +55,27 @@
         <li class="active">用户管理</li>
       </ol>
     </div>
+    <div class="tg_content">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>用户名</th>
+            <th>手机号</th>
+            <th>状态</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="pull-right">
+        <ul class="pagination" id="paginator">
+
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -74,9 +96,33 @@
     </div>
   </div>
 </div>
+<script type="text/html" id="tmp">
+  {{each rows v i }}
+
+  <tr>
+    <td>{{i + 1 + (page-1) * size }}</td>
+    <td>{{ v.username }}</td>
+    <td>{{ v.mobile }}</td>
+    <td>{{ v.isDelete === 1 ? "正常" : "禁用" }}</td>
+    <td>
+      {{if v.isDelete === 1}}
+      <button class="btn btn-danger">禁用</button>
+      {{/if}}
+      {{if v.isDelete === 0}}
+      <button class="btn btn-success">启用</button>
+      {{/if}}
+    </td>
+  </tr>
+  {{/each}}
+</script>
+
+
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/user.js"></script>
 </body>
 </html>
