用户管理完成

--- a/public/back/user.html
+++ b/public/back/user.html
@@ -79,6 +79,24 @@
   </div>
 </div>
 
+<div class="modal fade" tabindex="-1" id="btn_modal">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h4 class="modal-title">温馨提示</h4>
+      </div>
+      <div class="modal-body">
+        <p class="red"><i class="glyphicon glyphicon-info-sign"></i> 你确定要执行此操作吗？</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="submitBtn">确定</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="modal fade" tabindex="-1" id="loginout_modal">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
@@ -104,7 +122,7 @@
     <td>{{ v.username }}</td>
     <td>{{ v.mobile }}</td>
     <td>{{ v.isDelete === 1 ? "正常" : "禁用" }}</td>
-    <td>
+    <td data-id="{{v.id}}">
       {{if v.isDelete === 1}}
       <button class="btn btn-danger">禁用</button>
       {{/if}}
