--- a/public/back/second.html
+++ b/public/back/second.html
@@ -5,8 +5,10 @@
   <title>Title</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/public.css">
+  <link rel="stylesheet" href="./css/second.css">
 </head>
 <body>
 <div class="tg_aside">
@@ -55,7 +57,69 @@
         <li class="active">二级分类</li>
       </ol>
     </div>
-    <div class="tg_content"></div>
+    <div class="tg_content">
+      <button class="btn btn-default mb" id="addbtn-Second">添加分类</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>一级分类名称</th>
+            <th>二级分类名称</th>
+            <th>二级分类LOGO</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="pull-right">
+        <ul class="pagination" id="paginator"></ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" tabindex="-1" id="addsecond">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <form id="form">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          <h4 class="modal-title">添加分类</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="btn-group">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <span id="dropdownTxt">请选择一级分类</span>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                
+              </ul>
+            </div>
+            <input type="hidden" name="categoryId">
+            <input type="hidden" name="hot" value="1">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="brandName" placeholder="请输入二级目录">
+          </div>
+          <div class="form-group">
+            <label class="btn btn-default" for="fileupload">上传图片</label>
+            <input style="display: none" id="fileupload" type="file" name="pic1" data-url="/category/addSecondCategoryPic">
+          </div>
+          <div class="form-group" id="imgBox">
+            <img src="./images/none.png" style="width: 100px;height: 100px"  alt="">
+            <input type="hidden" name="brandLogo">
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary" id="add">添加</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
@@ -71,14 +135,35 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary" id="loginout">退出</button>
+        <button type="submit" class="btn btn-primary" id="loginout">添加</button>
       </div>
     </div>
   </div>
 </div>
+<script type="text/html" id="tmp">
+  {{each rows v i}}
+    <tr>
+      <td>{{i + 1 + (page - 1) * size}}</td>
+      <td>{{v.categoryName}}</td>
+      <td>{{v.brandName}}</td>
+      <td><img src="{{v.brandLogo}}" height=50px alt=""></td>
+    </tr>
+  {{/each}}
+</script>
+<script type="text/html" id="tmpsecond">
+  {{each rows v i}}
+    <li><a data-id="{{v.id}}" href="javascript:;">{{v.categoryName}}</a></li>
+  {{/each}}
+</script>
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+<script type="text/javascript" src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/second.js"></script>
 </body>
 </html>
