商品管理完成

--- a/public/back2/product.html
+++ b/public/back2/product.html
@@ -29,12 +29,12 @@
       <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
       <li>
         <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
-        <div class="child" style="display: none">
-          <a href="first.html">一级分类</a>
-          <a href="second.html">二级分类</a>
+        <div class="child">
+          <a href="first.html" >一级分类</a>
+          <a href="second.html" >二级分类</a>
         </div>
       </li>
-      <li><a class="current" href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+      <li><a href="product.html" class="current"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
     </ul>
   </div>
 </div>
@@ -62,10 +62,128 @@
       <li class="active">商品管理</li>
     </ol>
 
+    <div class="lt_content">
+
+      <button class="btn btn-default mb_20" id="addBtn">添加商品</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th width="10%">序号</th>
+            <th width="25%">商品名称</th>
+            <th width="25%">商品描述</th>
+            <th width="10%">商品库存</th>
+            <th width="10%">商品尺寸</th>
+            <th width="10%">商品状态</th>
+            <th width="10%">操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 挖个坑 -->
+        </tbody>
+      </table>
+
+      <!-- 准备一个分页容器, 要求是一个 ul -->
+      <div class="text-right">
+        <ul id="paginator"></ul>
+      </div>
+
+    </div>
 
   </div>
 
 </div>
+
+
+<!--
+  // 原生同步文件上传:
+     1. 使用 input:file, 里面指定 name
+     2. 给 form 表单指定, method="post", enctype="multipart/form-data"
+     3. 在后台就可以通过 $_FILES 进行接收
+     原生同步方式是会发生页面跳转的, 而且如果是大文件, 会导致页面卡顿, 用户体验不好
+
+  // 异步文件上传, XHR2.0, formData
+-->
+
+<!-- 添加产品模态框 -->
+<div class="modal fade" tabindex="-1" id="addModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="form">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+          <h4 class="modal-title">添加商品</h4>
+        </div>
+
+        <div class="modal-body">
+
+          <div class="form-group">
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                <span id="dropdownTxt">请选择二级分类</span>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <!-- 挖个坑 -->
+              </ul>
+            </div>
+            <!-- 归属的品牌 id -->
+            <input type="hidden" name="brandId">
+            <!-- 是否上架, 默认上架 statu: 1-->
+            <input type="hidden" name="statu" value="1">
+          </div>
+
+
+          <div class="form-group">
+            <input type="text" name="proName" class="form-control" placeholder="请输入商品名称">
+          </div>
+
+          <div class="form-group">
+            <textarea name="proDesc" class="form-control" rows="3" placeholder="请输入商品描述"></textarea>
+          </div>
+
+          <div class="form-group">
+            <input type="text" name="num" class="form-control" placeholder="请输入商品库存">
+          </div>
+
+          <div class="form-group">
+            <input type="text" name="size" class="form-control" placeholder="请输入商品尺码">
+          </div>
+
+          <div class="form-group">
+            <input type="text" name="oldPrice" class="form-control" placeholder="请输入商品原价">
+          </div>
+
+          <div class="form-group">
+            <input type="text" name="price" class="form-control" placeholder="请输入商品现价">
+          </div>
+
+          <div class="form-group">
+            <label for="fileupload" class="btn btn-default">上传图片</label>
+            <!-- 指定 name 用于后台将来接收文件
+                 指定 data-url 用于指定后台文件上传的地址
+                 multiple 设置用于让用户可以选择多张文件
+            -->
+            <input style="display: none;" type="file" id="fileupload" name="pic1" data-url="/product/addProductPic" multiple>
+          </div>
+
+          <div class="form-group" id="imgBox">
+            <!--<img src="./images/none.png" width="100" height="100" alt="">-->
+            <input type="hidden" name="picStatus">
+          </div>
+
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="submit" class="btn btn-primary" id="add">添加</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
 
 
 <!-- 退出模态框, 外层是蒙层, 内层才是模态框
@@ -94,14 +212,53 @@
 </div>
 
 
+<script type="text/html" id="productTpl">
+  {{ each rows v i }}
+    <tr>
+      <td>{{ i+1 + (page-1)*size }}</td>
+      <td>{{ v.proName }}</td>
+      <td>{{ v.proDesc }}	</td>
+      <td>{{ v.num }}</td>
+      <td>{{ v.size }}</td>
+      <!-- statu 1, 已上架   statu 0, 已下架-->
+      <td>
+        {{ v.statu === 1 ? "已上架" : "已下架" }}
+      </td>
+      <td>
+        {{ if v.statu === 1 }}
+          <!-- 下架按钮 -->
+          <button class="btn btn-danger">下架</button>
+        {{ else }}
+          <!-- 上架按钮 -->
+          <button class="btn btn-success">上架</button>
+        {{ /if }}
+      </td>
+    </tr>
+  {{ /each }}
+</script>
+
+
+<script type="text/html" id="dropdownTpl">
+  {{ each rows v i }}
+    <li><a data-id="{{ v.id }}" href="#">{{ v.brandName }}</a></li>
+  {{ /each }}
+</script>
+
+
 
 
 <script src="./lib/jquery/jquery.min.js"></script>
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+
 <script src="./lib/bootstrap/js/bootstrap.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/checkLogin.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/product.js"></script>
 
 </body>
 </html>
