--- a/public/back/product.html
+++ b/public/back/product.html
@@ -5,8 +5,10 @@
   <title>Title</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/public.css">
+  <link rel="stylesheet" href="./css/product.css">
 </head>
 <body>
 <div class="tg_aside">
@@ -54,7 +56,89 @@
         <li class="active">商品管理</li>
       </ol>
     </div>
-    <div class="tg_content"></div>
+    <div class="tg_content">
+      <button class="btn btn-default mb" id="addProduct">添加商品</button>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>序号</th>
+            <th>商品名称</th>
+            <th>商品描述</th>
+            <th>商品库存</th>
+            <th>商品尺寸</th>
+            <th>商品状态</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
+      <div class="pull-right">
+        <ul class="pagination" id="paginator"></ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" tabindex="-1" id="add_Product">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="form">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h4 class="modal-title">添加商品</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <div class="btn-group">
+            <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span id="dropdownTxt">选择二级分类</span>
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              
+            </ul>
+          </div>
+          <!-- 归属的品牌 id -->
+          <input type="hidden" name="brandId">
+          <!-- 是否上架, 默认上架 statu: 1-->
+          <input type="hidden" name="statu" value="1">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="proName" placeholder="请输入商品名称">
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" rows="3" name="proDesc" placeholder="请输入商品描述"></textarea>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="num" placeholder="请输入商品库存">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="size" placeholder="请输入商品尺码">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="oldPrice" placeholder="请输入商品原价">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="price" placeholder="请输入商品现价">
+        </div>
+        <div class="form-group">
+          <label for="fileupload" class="btn btn-default">上传图片</label>
+          <input style="display: block" id="fileupload" type="file" name="pic1" data-url="/product/addProductPic" multiple>
+        </div>
+        <div class="form-group" id="imgBox">
+          <!--<img src="./images/none.png" width="100" height="100" alt="">-->
+          <input type="hidden" name="picStatus">
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="submit" class="btn btn-primary" id="add">添加</button>
+      </div>
+      </form>
+    </div>
   </div>
 </div>
 
@@ -75,9 +159,40 @@
     </div>
   </div>
 </div>
+<script type="text/html" id="tmp">
+  {{each rows v i}}
+    <tr>
+      <td>{{i + 1 + (page - 1) * size}}</td>
+      <td>{{v.proName}}</td>
+      <td>{{v.proDesc}}</td>
+      <td>{{v.num}}</td>
+      <td>{{v.size}}</td>
+      <td>{{v.statu === 1 ? "已上架" : "已下架"}}</td>
+      <td>
+        {{if v.statu === 1}}
+          <button class="btn btn-danger">下架</button>
+        {{else}}
+          <button class="btn btn-success">上架</button>
+        {{/if}}
+      </td>
+    </tr>
+  {{/each}}
+</script>
+<script type="text/html" id="tmpli">
+  {{each rows v i}}
+    <li><a href="javascript:;" data-id="{{v.id}}">{{v.brandName}}</a></li>
+  {{/each}}
+</script>
 <script type="text/javascript" src="./lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+<script type="text/javascript" src="./lib/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript" src="./lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+<script type="text/javascript" src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="./lib/nprogress/nprogress.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/product.js"></script>
 </body>
 </html>
