--- a/public/front/index.html
+++ b/public/front/index.html
@@ -2,9 +2,57 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Title</title>
+  <link rel="stylesheet" href="./lib/mui/css/mui.css">
+  <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-
+<div class="tg_container">
+  <div class="tg_header">
+    <a href="" class="headl">
+      <i class="fa fa-home"></i>
+    </a>
+    <h3>淘购云</h3>
+    <a href="" class="headr">
+      <i class="fa fa-search"></i>
+    </a>
+  </div>
+  <div class="tg_mian">1111</div>
+  <div class="tg_footer">
+    <ul>
+      <li>
+        <a href="" class="current">
+          <i class="fa fa-home"></i>
+          <p>首页</p>
+        </a>
+      </li>
+      <li>
+        <a href="" class="">
+          <i class="fa fa-bars"></i>
+          <p>分类页</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <i class="fa fa-shopping-cart"></i>
+          <p>购物车</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <i class="fa fa-user"></i>
+          <p>用户中心</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/mui/js/mui.js"></script>
+<script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
 </body>
 </html>
