--- a/public/front/index.html
+++ b/public/front/index.html
@@ -21,29 +21,138 @@
       <i class="fa fa-search"></i>
     </a>
   </div>
-  <div class="tg_mian">1111</div>
+  <div class="tg_mian">
+    <div class="mui-scroll-wrapper">
+      <div class="mui-scroll">
+        <!--这里放置真实显示的DOM内容-->
+        <div class="banner">
+          <div class="mui-slider">
+            <div class="mui-slider-group mui-slider-loop">
+              <!--支持循环，需要重复图片节点-->
+              <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
+
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
+              <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
+              <!--支持循环，需要重复图片节点-->
+              <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
+            </div>
+            <div class="mui-slider-indicator">
+              <div class="mui-indicator mui-active"></div>
+              <div class="mui-indicator"></div>
+              <div class="mui-indicator"></div>
+              <div class="mui-indicator"></div>
+              <div class="mui-indicator"></div>
+              <div class="mui-indicator"></div>
+            </div>
+          </div>
+        </div>
+        <div class="nav mui-clearfix">
+          <ul>
+            <li><a href=""><img src="./images/nav1.png" alt=""></a></li>
+            <li><a href=""><img src="./images/nav2.png" alt=""></a></li>
+            <li><a href=""><img src="./images/nav3.png" alt=""></a></li>
+            <li><a href=""><img src="./images/nav4.png" alt=""></a></li>
+            <li><a href=""><img src="./images/nav5.png" alt=""></a></li>
+            <li><a href=""><img src="./images/nav6.png" alt=""></a></li>
+          </ul>
+        </div>
+        <div class="product">
+          <ul>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./images/product.jpg" alt="">
+                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
+                <p><span>¥560</span><del>¥600</del></p>
+                <button class="mui-btn mui-btn-blue">立即购买</button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="tg_footer">
     <ul>
       <li>
-        <a href="" class="current">
+        <a href="index.html" class="current">
           <i class="fa fa-home"></i>
           <p>首页</p>
         </a>
       </li>
       <li>
-        <a href="" class="">
+        <a href="category.html" class="">
           <i class="fa fa-bars"></i>
           <p>分类页</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="cart.html">
           <i class="fa fa-shopping-cart"></i>
           <p>购物车</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a href="user.html">
           <i class="fa fa-user"></i>
           <p>用户中心</p>
         </a>
@@ -54,5 +163,7 @@
 <script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
 <script type="text/javascript" src="./lib/mui/js/mui.js"></script>
 <script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
+<script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
