--- a/public/front2/searchList.html
+++ b/public/front2/searchList.html
@@ -9,7 +9,7 @@
   <!-- 引入字体图标库 -->
   <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/searchList.css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -20,9 +20,9 @@
 <!-- 由于中间有区域滚动, 所以需要一个全屏容器 -->
 <div class="lt_container">
   <div class="lt_header">
-    <a href="index.html" class="icon_left"><i class="fa fa-home"></i></a>
-    <h3>乐淘云购</h3>
-    <a href="search.html" class="icon_right"><i class="fa fa-search"></i></a>
+    <!-- 返回上一页 history.go(-1);  history.back() -->
+    <a href="javascript: history.go(-1);" class="icon_left"><i class="mui-icon mui-icon-back"></i></a>
+    <h3>搜索列表</h3>
   </div>
 
 
@@ -32,44 +32,18 @@
       <div class="mui-scroll">
         <!--这里放置真实显示的DOM内容-->
 
-        <!-- 轮播图 -->
-        <div class="mui-slider">
-          <div class="mui-slider-group mui-slider-loop">
-            <!-- 添加假图片 -->
-            <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
-
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
-            <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
-
-            <!-- 添加假图片 -->
-            <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
-          </div>
-
-          <!-- 小圆点 -->
-          <div class="mui-slider-indicator">
-            <div class="mui-indicator mui-active"></div>
-            <div class="mui-indicator"></div>
-            <div class="mui-indicator"></div>
-            <div class="mui-indicator"></div>
-            <div class="mui-indicator"></div>
-            <div class="mui-indicator"></div>
-          </div>
+        <!-- 搜索框 -->
+        <div class="lt_search">
+          <input type="text" placeholder="请输入搜索关键字" class="search_input">
+          <button class="mui-btn mui-btn-primary search_btn">搜索</button>
         </div>
 
-        <!-- 导航模块 -->
-        <div class="lt_nav">
-          <ul class="mui-clearfix">
-            <li><a href="#"><img src="./images/nav1.png" alt=""></a></li>
-            <li><a href="#"><img src="./images/nav2.png" alt=""></a></li>
-            <li><a href="#"><img src="./images/nav3.png" alt=""></a></li>
-            <li><a href="#"><img src="./images/nav4.png" alt=""></a></li>
-            <li><a href="#"><img src="./images/nav5.png" alt=""></a></li>
-            <li><a href="#"><img src="./images/nav6.png" alt=""></a></li>
-          </ul>
+        <!-- 排序 -->
+        <div class="lt_sort">
+          <a href="#">上架时间 <i class="fa fa-angle-down"></i></a>
+          <a href="#">价格  <i class="fa fa-angle-down"></i></a>
+          <a href="#">库存 <i class="fa fa-angle-down"></i></a>
+          <a href="#">折扣 <i class="fa fa-angle-down"></i></a>
         </div>
 
         <!-- 产品模块 -->
@@ -144,7 +118,6 @@
           </ul>
         </div>
 
-
       </div>
     </div>
   </div>
@@ -155,7 +128,7 @@
   <div class="lt_footer">
     <ul class="mui-clearfix">
       <li>
-        <a href="index.html" class="current">
+        <a href="index.html">
           <i class="fa fa-home"></i>
           <p>首页</p>
         </a>
@@ -182,11 +155,35 @@
   </div>
 </div>
 
+<script type="text/html" id="history_tpl">
+  {{ if arr.length == 0 }}
+  <p>没有更多数据了</p>
+  {{ else }}
+  <div class="title">
+    <span class="mui-pull-left">搜索历史</span>
+    <span class="mui-pull-right icon_empty"><i class="fa fa-trash"></i>清空记录</span>
+  </div>
+  <div class="content">
+    <ul>
+      {{ each arr v i }}
+      <li>
+        <a class="mui-pull-left" href="#">{{ v }}</a>
+        <i data-index="{{ i }}" class="icon_delete mui-pull-right mui-icon mui-icon-closeempty"></i>
+      </li>
+      {{ /each }}
+    </ul>
+  </div>
+  {{ /if }}
+</script>
+
 
 
 
 <script src="./lib/mui/js/mui.js"></script>
+<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/searchList.js"></script>
 
 </body>
 </html>
