分类静态完成部分

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -13,11 +13,11 @@
 <body>
 <div class="tg_container">
   <div class="tg_header">
-    <a href="" class="headl">
+    <a href="index.html" class="headl">
       <i class="fa fa-home"></i>
     </a>
     <h3>淘购云</h3>
-    <a href="" class="headr">
+    <a href="search.html" class="headr">
       <i class="fa fa-search"></i>
     </a>
   </div>
