--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -25,73 +25,14 @@
           <input type="text" placeholder="请输入搜索关键字" class="search_input">
           <button id="add_btn">搜索</button>
         </div>
+        <div class="sort">
+          <a href="javascript:;">上架时间<i class="fa fa-angle-down"></i></a>
+          <a href="javascript:;" data-type="price">价格<i class="fa fa-angle-down"></i></a>
+          <a href="javascript:;" data-type="num">库存<i class="fa fa-angle-down"></i></a>
+          <a href="javascript:;">折扣<i class="fa fa-angle-down"></i></a>
+        </div>
         <div class="product mui-clearfix">
-          <ul>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./images/product.jpg" alt="">
-                <p class="mui-ellipsis-2">adidas阿迪达斯 男式 场下休闲篮球鞋S83700场下休闲篮球鞋S83700 </p>
-                <p><span>¥560</span><del>¥600</del></p>
-                <button class="mui-btn mui-btn-blue">立即购买</button>
-              </a>
-            </li>
-          </ul>
+          <div class="loading"></div>
         </div>
       </div>
     </div>
@@ -126,10 +67,25 @@
   </div>
 </div>
 
+<script type="text/html" id="search_tmp">
+  <ul>
+    {{each data v i}}
+      <li>
+        <a href="">
+          <img src="{{v.pic[0].picAddr}}" alt="">
+          <p class="mui-ellipsis-2">{{v.proName}}</p>
+          <p><span>¥{{v.price}}</span><del>¥{{v.oldPrice}}</del></p>
+          <button class="mui-btn mui-btn-blue">立即购买</button>
+        </a>
+      </li>
+    {{/each}}
+  </ul>
+</script>
+
 <script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
 <script type="text/javascript" src="./lib/mui/js/mui.js"></script>
 <script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-
+<script type="text/javascript" src="./js/searchList.js"></script>
 </body>
 </html>
