--- a/public/front/product.html
+++ b/public/front/product.html
@@ -26,75 +26,74 @@
       <div class="mui-scroll">
         <!--这里放置真实显示的DOM内容-->
         <!--产品图展示轮播-->
-        <div class="particulars">
-          <div class="mui-slider">
-            <div class="mui-slider-group mui-slider-loop">
-              <!--支持循环，需要重复图片节点-->
-              <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
 
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
-              <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
-              <!--支持循环，需要重复图片节点-->
-              <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
-            </div>
-            <div class="mui-slider-indicator">
-              <div class="mui-indicator mui-active"></div>
-              <div class="mui-indicator"></div>
-              <div class="mui-indicator"></div>
-              <div class="mui-indicator"></div>
-              <div class="mui-indicator"></div>
-              <div class="mui-indicator"></div>
-            </div>
-          </div>
-        </div>
-        <!--产品标题-->
-        <div class="title">
-          Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400
-        </div>
-        <!--产品价格-->
-        <div class="prices">
-          价格
-          <span class="price">¥999</span>
-          <del class="oldPrice">¥1000</del>
-        </div>
-        <!--产品尺码-->
-        <div class="size">
-          <span>1</span>
-          <span>2</span>
-          <span>3</span>
-          <span>4</span>
-        </div>
-        <!--产品数量-->
-        <div class="number">
-          数量:
-          <div class="mui-numbox" data-numbox-min="1" data-numbox-max="400">
-            <!-- "-"按钮，点击可减小当前数值 -->
-            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-            <input class="mui-numbox-input" type="number" />
-            <!-- "+"按钮，点击可增大当前数值 -->
-            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-          </div>
-          <span>剩余数量: 1000 </span>
-        </div>
-        <!--产品详情-->
-        <div class="price">
-          详情: 描述
-        </div>
       </div>
     </div>
   </div>
   <div class="tg_footer">
     <a href="" class="mui-pull-left">前往购物车</a>
     <div class="mui-pull-right">
-      <button class="mui-btn mui-btn-danger">加入购物车</button>
+      <button class="mui-btn mui-btn-danger" id="addCart">加入购物车</button>
       <button class="mui-btn mui-btn-warning">买买买</button>
     </div>
   </div>
 </div>
+
+<script type="text/html" id="tmp_Price">
+  <div class="particulars">
+    <div class="mui-slider">
+      <div class="mui-slider-group mui-slider-loop">
+
+        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="{{pic[pic.length-1].picAddr}}" /></a></div>
+        {{each pic v i}}
+        <div class="mui-slider-item"><a href="#"><img src="{{v.picAddr}}" /></a></div>
+        {{/each}}
+        <!--支持循环，需要重复图片节点-->
+        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="{{pic[0].picAddr}}" /></a></div>
+      </div>
+      <div class="mui-slider-indicator">
+        {{each pic v i}}
+        <div class="mui-indicator {{ i === 0 ? 'mui-active' : '' }}"></div>
+        {{/each}}
+      </div>
+    </div>
+  </div>
+  <!--产品标题-->
+  <div class="title">
+    {{proName}}
+  </div>
+  <!--产品价格-->
+  <div class="prices">
+    价格
+    <span class="price">¥{{price}}</span>
+    <del class="oldPrice">¥{{oldPrice}}</del>
+  </div>
+  <!--产品尺码-->
+  <div class="size">
+    <%
+      var arr = size.split("-");
+      var start = arr[0];
+      var end = arr[1];
+      for(var i = start; i <= end; i++){
+    %>
+    <span><%= i %></span>
+    <%}%>
+  </div>
+  <!--产品数量-->
+  <div class="number">
+    数量:
+    <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='{{num}}'>
+      <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+      <input class="mui-numbox-input" type="number" />
+      <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+    </div>
+    <span>剩余数量: {{num}} </span>
+  </div>
+  <!--产品详情-->
+  <div class="price">
+    详情: {{proDesc}}
+  </div>
+</script>
 <script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
 <script type="text/javascript" src="./lib/mui/js/mui.js"></script>
 <script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
