--- a/public/front/user.html
+++ b/public/front/user.html
@@ -2,9 +2,92 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Title</title>
+  <link rel="stylesheet" href="./lib/mui/css/mui.css">
+  <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
+  <link rel="stylesheet" href="./css/common.css">
+
 </head>
 <body>
+<div class="tg_container">
+  <div class="tg_header">
+    <a href="javascript:history.go(-1);" class="headl">
+      <i class="mui-icon mui-icon-back"></i>
+    </a>
+    <h3>淘购云</h3>
+  </div>
+  <div class="tg_mian">
+    <div class="mui-scroll-wrapper">
+      <div class="mui-scroll">
+        <!--这里放置真实显示的DOM内容-->
 
+        <ul class="mui-table-view">
+          <li class="mui-table-view-cell mui-media" id="userInfo">
+
+
+          </li>
+          <li class="mui-table-view-cell">
+            <a class="mui-navigate-right">账号与安全</a>
+          </li>
+          <li class="mui-table-view-cell">
+            <a class="mui-navigate-right">我的购物车</a>
+          </li>
+          <li class="mui-table-view-cell">
+            <a class="mui-navigate-right">收货地址管理</a>
+          </li>
+        </ul>
+        <div class="btn-wrapper">
+          <button class="mui-btn mui-btn-block" id="logout">退出</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="tg_footer">
+    <ul>
+      <li>
+        <a href="index.html" class="current">
+          <i class="fa fa-home"></i>
+          <p>首页</p>
+        </a>
+      </li>
+      <li>
+        <a href="category.html" class="">
+          <i class="fa fa-bars"></i>
+          <p>分类页</p>
+        </a>
+      </li>
+      <li>
+        <a href="cart.html">
+          <i class="fa fa-shopping-cart"></i>
+          <p>购物车</p>
+        </a>
+      </li>
+      <li>
+        <a href="user.html">
+          <i class="fa fa-user"></i>
+          <p>用户中心</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<script type="text/html" id="user_Tmp">
+  <a href="javascript:;">
+    <img class="mui-media-object mui-pull-left" src="./images/user.jpg">
+    <div class="mui-media-body">
+      {{username}}
+      <p class='mui-ellipsis'>绑定手机: {{mobile}} </p>
+    </div>
+  </a>
+</script>
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/mui/js/mui.js"></script>
+<script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
+<script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/user.js"></script>
 </body>
 </html>
