--- a/public/front/cart.html
+++ b/public/front/cart.html
@@ -2,9 +2,131 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Title</title>
+  <link rel="stylesheet" href="./lib/mui/css/mui.css">
+  <link rel="stylesheet" href="./lib/fa/css/font-awesome.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/cart.css">
+
 </head>
 <body>
+<div class="tg_container">
+  <div class="tg_header">
+    <a href="javascript:history.go(-1);" class="headl">
+      <i class="mui-icon mui-icon-back"></i>
+    </a>
+    <h3>淘购云</h3>
+  </div>
+  <div class="tg_mian">
+    <div class="mui-scroll-wrapper">
+      <div class="mui-scroll">
+        <!--这里放置真实显示的DOM内容-->
+        <ul class="mui-table-view">
 
+        </ul>
+
+
+      </div>
+    </div>
+  </div>
+  <div class="tg_footer">
+    <ul>
+      <li>
+        <a href="index.html" class="current">
+          <i class="fa fa-home"></i>
+          <p>首页</p>
+        </a>
+      </li>
+      <li>
+        <a href="category.html" class="">
+          <i class="fa fa-bars"></i>
+          <p>分类页</p>
+        </a>
+      </li>
+      <li>
+        <a href="cart.html">
+          <i class="fa fa-shopping-cart"></i>
+          <p>购物车</p>
+        </a>
+      </li>
+      <li>
+        <a href="user.html">
+          <i class="fa fa-user"></i>
+          <p>用户中心</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<script type="text/html" id="cart_Tmp">
+  {{each arr v i}}
+  <li class="mui-table-view-cell cart_item">
+    <div class="mui-slider-right mui-disabled">
+      <a data-id="{{ v.id }}" data-num="{{ v.num }}" data-productNum="{{ v.productNum }}" data-size="{{ v.size }}" data-productSize="{{ v.productSize }}" class="mui-btn mui-btn-primary mui-icon mui-icon-compose btn_edit" ></a>
+      <a data-id="{{ v.id }}" class="mui-btn mui-btn-danger mui-icon mui-icon-trash btn_delete" ></a>
+    </div>
+    <div class="mui-slider-handle">
+      <div class="mui-table-cell">
+
+        <!-- 左侧图片 -->
+        <div class="cart_img">
+          <img src="{{v.pic[0].picAddr}}" alt="">
+          <input type="checkbox" class="ck">
+        </div>
+
+        <!-- 右侧商品详情 -->
+        <div class="cart_info">
+          <p class="pro_name mui-ellipsis-2">
+            {{v.proName}}
+          </p>
+          <p>
+            <span class="price">¥{{v.price}}</span>
+            <span class="oldPrice">¥{{v.oldPrice}}</span>
+            <span class="mui-pull-right">{{v.num}}双</span>
+          </p>
+          <p>
+            鞋码: {{v.size}}
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </li>
+  {{/each}}
+</script>
+
+<script type="text/html" id="editTpl">
+  <div class="lt_size">
+    尺码:
+    <%
+    var arr = productsize.split("-");
+    var start = arr[0];
+    var end = arr[1];
+    for ( var i = start; i <= end; i++ ) {
+    %>
+    <span class="{{ size == i ? 'current' : '' }}">{{ i }}</span>
+    <%
+    }
+    %>
+  </div>
+
+  <div class="lt_num">
+    数量:
+    <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='{{ productnum }}'>
+      <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+      <input class="mui-numbox-input" type="number" value="{{ num }}" />
+      <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+    </div>
+  </div>
+</script>
+
+<script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
+<script type="text/javascript" src="./lib/mui/js/mui.js"></script>
+<script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
+<script type="text/javascript" src="./js/common.js"></script>
+<script type="text/javascript" src="./js/cart.js"></script>
 </body>
 </html>
