--- a/public/front/category.html
+++ b/public/front/category.html
@@ -22,28 +22,25 @@
     </a>
   </div>
   <div class="tg_mian">
-    <div class="category_left">
+    <div class="category_left mui-clearfix">
       <div class="mui-scroll-wrapper">
         <div class="mui-scroll">
           <ul>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
-            <li><a href="">运动馆</a></li>
+
           </ul>
         </div>
       </div>
     </div>
-    <div class="category_right"></div>
+    <div class="category_right mui-clearfix">
+      <div class="mui-scroll-wrapper mui-clearfix">
+        <div class="mui-scroll">
+        <!--这里放置真实显示的DOM内容-->
+          <ul>
+
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="tg_footer">
     <ul>
@@ -74,10 +71,31 @@
     </ul>
   </div>
 </div>
+
+<script type="text/html" id="nav_Tmp">
+ {{each rows v i}}
+  <li><a href="javascript:;" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+ {{/each}}
+</script>
+<script type="text/html" id="nav2_Tmp">
+  {{if rows.length === 0 }}
+    <p class="tips">没有更多分类信息了</p>
+  {{else}}
+    {{each rows v i}}
+      <li>
+        <a href="#">
+          <img src="{{v.brandLogo}}" alt="">
+          <p>{{v.brandName}}</p>
+        </a>
+      </li>
+    {{/each}}
+  {{/if}}
+
+</script>
 <script type="text/javascript" src="./lib/artTemplate/template-web.js"></script>
 <script type="text/javascript" src="./lib/mui/js/mui.js"></script>
 <script type="text/javascript" src="./lib/zepto/zepto.min.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-
+<script type="text/javascript" src="./js/category.js"></script>
 </body>
 </html>
